<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailTitle"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        android:hint="@string/emailHint"/>
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passTitle"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:hint="@string/passHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repPassTitle"/>
    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:hint="@string/repPassHint"/>
        
    <Button
        android:id="@+id/confirm"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/confirmText"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>